BlockSectionList cleanup