@@ -2,6 +2,9 @@ package org.valkyrienskies.mod.common.physics;
 
 import net.minecraft.block.material.Material;
 import net.minecraft.block.state.IBlockState;
+import net.minecraft.entity.Entity;
+import net.minecraft.entity.item.EntityItem;
+import net.minecraft.entity.projectile.EntityFireball;
 import net.minecraft.util.math.AxisAlignedBB;
 import net.minecraft.util.math.BlockPos;
 import net.minecraft.world.ChunkCache;
@@ -9,16 +12,12 @@ import net.minecraft.world.World;
 import net.minecraft.world.gen.ChunkProviderServer;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
+import org.valkyrienskies.mod.common.entity.EntityMountable;
 import org.valkyrienskies.mod.common.ships.ship_world.PhysicsObject;
 
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
+import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.ConcurrentLinkedQueue;
 
 /**
  * This class stores the block sections that a ship is going to collide with.
@@ -29,143 +28,170 @@ public class BlockSectionList {
     private static final int BLOCK_SECTION_CACHE_HYSTERESIS_BLOCKS = 4;
     private static final Map<BlockSection.Key, Set<BlockSectionList>> CACHES_BY_SECTION = new ConcurrentHashMap<>();
 
+    @Nullable
     private World cachedBlockSectionWorld;
+    @Nullable
     private BlockSection.Range cachedBlockSectionRange;
     private int blockSectionCacheAge;
     private final Map<BlockSection.Key, BlockSection> cachedBlockSections = new HashMap<>();
     private final Set<BlockSection.Key> cachedEmptyBlockSections = new HashSet<>();
-    private final Set<BlockSection.Key> dirtyBlockSections = new HashSet<>();
+    private final Queue<BlockSection.Key> dirtyBlockSections = new ConcurrentLinkedQueue<>();
     private final Set<BlockSection.Key> registeredBlockSections = new HashSet<>();
-    private final List<BlockSection> blockSections = new ArrayList<>();
+    @NotNull
+    private List<BlockSection> blockSections = List.of();
 
-    public void onUpdate(PhysicsObject physicsObject) {
-        World nextBlockSectionWorld = null;
-        BlockSection.Range nextBlockSectionRange = null;
-        int nextBlockSectionCacheAge = 0;
-        List<BlockSection> nextBlockSections = new ArrayList<>();
-        Map<BlockSection.Key, BlockSection> nextCachedBlockSections = new HashMap<>();
-        Set<BlockSection.Key> nextCachedEmptyBlockSections = new HashSet<>();
-        List<BlockSection.Key> nextRegisteredBlockSections = Collections.emptyList();
-
+    public void onUpdate(@NotNull PhysicsObject physicsObject) {
         AxisAlignedBB shipAabb = physicsObject.getPhysicsTransformAABB();
         if (shipAabb != null) {
             World world = physicsObject.getWorld();
-            BlockPos shipMin = new BlockPos(
-                    (int) Math.floor(shipAabb.minX),
-                    Math.max(0, (int) Math.floor(shipAabb.minY)),
-                    (int) Math.floor(shipAabb.minZ)
-            );
-            BlockPos shipMax = new BlockPos(
-                    (int) Math.ceil(shipAabb.maxX),
-                    Math.min(world.getHeight() - 1, (int) Math.ceil(shipAabb.maxY)),
-                    (int) Math.ceil(shipAabb.maxZ)
-            );
-
-            //---chunk scanning---
-            BlockSection.Range exactBlockSectionRange = BlockSection.Range.fromBlockCorners(shipMin, shipMax);
-            boolean areSurroundingChunksLoaded = this.areChunksLoaded(world, exactBlockSectionRange);
-
-            //---block section scanning---
-            if (areSurroundingChunksLoaded) {
-                nextBlockSectionWorld = world;
-                BlockSection.Range hysteresisRange = BlockSection.Range.fromBlockCorners(
-                        this.growMin(shipMin, BLOCK_SECTION_CACHE_HYSTERESIS_BLOCKS),
-                        this.growMax(shipMax, world, BLOCK_SECTION_CACHE_HYSTERESIS_BLOCKS)
-                );
-                BlockSection.Range paddedRange = BlockSection.Range.fromBlockCorners(
-                        this.growMin(shipMin, BLOCK_SECTION_CACHE_PADDING_BLOCKS),
-                        this.growMax(shipMax, world, BLOCK_SECTION_CACHE_PADDING_BLOCKS)
-                );
-                Map<BlockSection.Key, BlockSection> previousBlockSections;
-                Set<BlockSection.Key> previousEmptyBlockSections;
-                Set<BlockSection.Key> dirtyBlockSections;
-                boolean forceSectionRescan;
-                synchronized (this) {
-                    boolean sameWorld = this.cachedBlockSectionWorld == world;
-                    boolean useCachedRange = sameWorld
-                            && this.cachedBlockSectionRange != null
-                            && this.cachedBlockSectionRange.contains(hysteresisRange);
-                    nextBlockSectionRange = useCachedRange ? this.cachedBlockSectionRange : paddedRange;
-                    if (!this.areChunksLoaded(world, nextBlockSectionRange)) nextBlockSectionRange = exactBlockSectionRange;
-                    nextRegisteredBlockSections = nextBlockSectionRange.keys(world);
-                    boolean sameRange = sameWorld && nextBlockSectionRange.equals(this.cachedBlockSectionRange);
-                    forceSectionRescan = !sameWorld
-                            || (sameRange && this.blockSectionCacheAge >= BLOCK_SECTION_CACHE_RESCAN_INTERVAL_TICKS);
-                    nextBlockSectionCacheAge = sameRange && !forceSectionRescan ? this.blockSectionCacheAge + 1 : 0;
-                    previousBlockSections = new HashMap<>(this.cachedBlockSections);
-                    previousEmptyBlockSections = new HashSet<>(this.cachedEmptyBlockSections);
-                    dirtyBlockSections = new HashSet<>(this.dirtyBlockSections);
-                }
-
-                ChunkCache chunkCache = null;
-                BlockPos cacheMin = new BlockPos(
-                        nextBlockSectionRange.minX() << 4,
-                        Math.max(0, nextBlockSectionRange.minY() << 4),
-                        nextBlockSectionRange.minZ() << 4
-                );
-                BlockPos cacheMax = new BlockPos(
-                        (nextBlockSectionRange.maxX() << 4) + 15,
-                        Math.min(world.getHeight() - 1, (nextBlockSectionRange.maxY() << 4) + 15),
-                        (nextBlockSectionRange.maxZ() << 4) + 15
-                );
-                for (BlockSection.Key sectionKey : nextRegisteredBlockSections) {
-                    BlockSection cachedSection = previousBlockSections.get(sectionKey);
-                    boolean knownEmptySection = previousEmptyBlockSections.contains(sectionKey);
-                    boolean shouldRescanSection = forceSectionRescan
-                            || dirtyBlockSections.contains(sectionKey)
-                            || (cachedSection == null && !knownEmptySection);
-
-                    if (!shouldRescanSection) {
-                        if (cachedSection != null) {
-                            nextCachedBlockSections.put(sectionKey, cachedSection);
-                            nextBlockSections.add(cachedSection);
-                        }
-                        else nextCachedEmptyBlockSections.add(sectionKey);
-                        continue;
-                    }
-
-                    if (chunkCache == null) chunkCache = new ChunkCache(world, cacheMin, cacheMax, 0);
-                    BlockSection blockSection = this.createBlockSection(world, chunkCache, sectionKey);
-                    if (blockSection == null) {
-                        nextCachedEmptyBlockSections.add(sectionKey);
-                    }
-                    else {
-                        nextCachedBlockSections.put(sectionKey, blockSection);
-                        nextBlockSections.add(blockSection);
-                    }
-                }
-            }
-
+            List<BlockSection> blockSections = this.updateBlockSectionCache(world, shipAabb);
+            this.blockSections = List.copyOf(blockSections);
         }
-
-        synchronized (this) {
-            this.updateRegisteredBlockSections(nextRegisteredBlockSections);
-            this.cachedBlockSectionWorld = nextBlockSectionWorld;
-            this.cachedBlockSectionRange = nextBlockSectionRange;
-            this.blockSectionCacheAge = nextBlockSectionCacheAge;
-            this.cachedBlockSections.clear();
-            this.cachedBlockSections.putAll(nextCachedBlockSections);
-            this.cachedEmptyBlockSections.clear();
-            this.cachedEmptyBlockSections.addAll(nextCachedEmptyBlockSections);
-            nextRegisteredBlockSections.forEach(this.dirtyBlockSections::remove);
-            this.dirtyBlockSections.retainAll(this.registeredBlockSections);
-            this.blockSections.clear();
-            this.blockSections.addAll(nextBlockSections);
+        else  {
+            this.clearBlockSectionCache();
+            this.blockSections = List.of();
         }
     }
 
-    public synchronized void close() {
-        this.updateRegisteredBlockSections(Collections.emptyList());
+    public void close() {
+        this.clearBlockSectionCache();
+        this.dirtyBlockSections.clear();
+        this.blockSections = List.of();
+    }
+
+    /**
+     * Figures out which block sections the ship needs and keeps the cache up to date.
+     * If the chunks are not loaded, it just clears the old cache.
+     */
+    @NotNull
+    private List<BlockSection> updateBlockSectionCache(@NotNull World world, @NotNull AxisAlignedBB shipAabb) {
+        BlockPos shipMin = new BlockPos(
+                (int) Math.floor(shipAabb.minX),
+                Math.max(0, (int) Math.floor(shipAabb.minY)),
+                (int) Math.floor(shipAabb.minZ)
+        );
+        BlockPos shipMax = new BlockPos(
+                (int) Math.ceil(shipAabb.maxX),
+                Math.min(world.getHeight() - 1, (int) Math.ceil(shipAabb.maxY)),
+                (int) Math.ceil(shipAabb.maxZ)
+        );
+
+        BlockSection.Range exactRange = BlockSection.Range.fromBlockCorners(shipMin, shipMax);
+        if (!this.areChunksLoaded(world, exactRange)) {
+            this.clearBlockSectionCache();
+            return List.of();
+        }
+
+        BlockSection.Range hysteresisRange = this.createExpandedRange(world, shipMin, shipMax, BLOCK_SECTION_CACHE_HYSTERESIS_BLOCKS);
+        BlockSection.Range paddedRange = this.createExpandedRange(world, shipMin, shipMax, BLOCK_SECTION_CACHE_PADDING_BLOCKS);
+
+        boolean sameWorld = this.cachedBlockSectionWorld == world;
+        boolean useCachedRange = sameWorld && this.cachedBlockSectionRange != null && this.cachedBlockSectionRange.contains(hysteresisRange);
+        BlockSection.Range nextRange = useCachedRange ? this.cachedBlockSectionRange : paddedRange;
+        if (!this.areChunksLoaded(world, nextRange)) nextRange = exactRange;
+
+        List<BlockSection.Key> nextRegisteredSections = nextRange.keys(world);
+        boolean sameRange = sameWorld && nextRange.equals(this.cachedBlockSectionRange);
+        boolean forceRescan = !sameWorld || (sameRange && this.blockSectionCacheAge >= BLOCK_SECTION_CACHE_RESCAN_INTERVAL_TICKS);
+        int nextCacheAge = sameRange && !forceRescan ? this.blockSectionCacheAge + 1 : 0;
+
+        Map<BlockSection.Key, BlockSection> previousSections = new HashMap<>(this.cachedBlockSections);
+        Set<BlockSection.Key> previousEmptySections = new HashSet<>(this.cachedEmptyBlockSections);
+        Set<BlockSection.Key> dirtySections = this.drainDirtyBlockSections();
+        Map<BlockSection.Key, BlockSection> nextCachedSections = new HashMap<>();
+        Set<BlockSection.Key> nextCachedEmptySections = new HashSet<>();
+        List<BlockSection> nextBlockSections = new ArrayList<>();
+
+        ChunkCache chunkCache = null;
+        BlockPos cacheMin = new BlockPos(
+                nextRange.minX() << 4,
+                Math.max(0, nextRange.minY() << 4),
+                nextRange.minZ() << 4
+        );
+        BlockPos cacheMax = new BlockPos(
+                (nextRange.maxX() << 4) + 15,
+                Math.min(world.getHeight() - 1, (nextRange.maxY() << 4) + 15),
+                (nextRange.maxZ() << 4) + 15
+        );
+
+        for (BlockSection.Key sectionKey : nextRegisteredSections) {
+            BlockSection cachedSection = previousSections.get(sectionKey);
+            boolean knownEmpty = previousEmptySections.contains(sectionKey);
+            boolean shouldRescan = forceRescan || dirtySections.contains(sectionKey) || (cachedSection == null && !knownEmpty);
+
+            if (shouldRescan) {
+                if (chunkCache == null) chunkCache = new ChunkCache(world, cacheMin, cacheMax, 0);
+                BlockSection blockSection = this.createBlockSection(world, chunkCache, sectionKey);
+                if (blockSection == null) {
+                    nextCachedEmptySections.add(sectionKey);
+                }
+                else {
+                    nextCachedSections.put(sectionKey, blockSection);
+                    nextBlockSections.add(blockSection);
+                }
+            }
+            else {
+                if (cachedSection != null) {
+                    nextCachedSections.put(sectionKey, cachedSection);
+                    nextBlockSections.add(cachedSection);
+                }
+                else nextCachedEmptySections.add(sectionKey);
+            }
+        }
+
+        this.updateRegisteredBlockSections(nextRegisteredSections);
+        this.cachedBlockSectionWorld = world;
+        this.cachedBlockSectionRange = nextRange;
+        this.blockSectionCacheAge = nextCacheAge;
+        this.cachedBlockSections.clear();
+        this.cachedBlockSections.putAll(nextCachedSections);
+        this.cachedEmptyBlockSections.clear();
+        this.cachedEmptyBlockSections.addAll(nextCachedEmptySections);
+        return nextBlockSections;
+    }
+
+    /**
+     * Clears the block section cache and stops watching its old sections.
+     * Dirty section updates stay queued unless the whole cache is being closed.
+     */
+    private void clearBlockSectionCache() {
+        this.updateRegisteredBlockSections(List.of());
         this.cachedBlockSections.clear();
         this.cachedEmptyBlockSections.clear();
-        this.dirtyBlockSections.clear();
-        this.blockSections.clear();
         this.cachedBlockSectionWorld = null;
         this.cachedBlockSectionRange = null;
         this.blockSectionCacheAge = 0;
     }
 
+    /**
+     * Grows a block range while keeping its Y values inside the world.
+     */
+    @NotNull
+    private BlockSection.Range createExpandedRange(@NotNull World world, @NotNull BlockPos min, @NotNull BlockPos max, int grow) {
+        BlockPos expandedMin = new BlockPos(
+                min.getX() - grow,
+                Math.max(0, min.getY() - grow),
+                min.getZ() - grow
+        );
+        BlockPos expandedMax = new BlockPos(
+                max.getX() + grow,
+                Math.min(world.getHeight() - 1, max.getY() + grow),
+                max.getZ() + grow
+        );
+        return BlockSection.Range.fromBlockCorners(expandedMin, expandedMax);
+    }
+
     //-----block section manipulation-----
+    @NotNull
+    private Set<BlockSection.Key> drainDirtyBlockSections() {
+        Set<BlockSection.Key> dirtySections = new HashSet<>();
+        BlockSection.Key dirtySection;
+        while ((dirtySection = this.dirtyBlockSections.poll()) != null) {
+            dirtySections.add(dirtySection);
+        }
+        return dirtySections;
+    }
+
     private void updateRegisteredBlockSections(@NotNull List<BlockSection.Key> nextBlockSections) {
         Set<BlockSection.Key> nextBlockSectionSet = new HashSet<>(nextBlockSections);
         for (BlockSection.Key sectionKey : new ArrayList<>(this.registeredBlockSections)) {
@@ -221,6 +247,7 @@ public class BlockSectionList {
         return builder.isEmpty() ? null : builder.build();
     }
 
+    @SuppressWarnings("BooleanMethodIsAlwaysInverted")
     private boolean areChunksLoaded(World world, BlockSection.Range sectionRange) {
         ChunkProviderServer serverChunkProvider = (ChunkProviderServer) world.getChunkProvider();
         for (int chunkX = sectionRange.minX(); chunkX <= sectionRange.maxX(); chunkX++) {
@@ -231,22 +258,7 @@ public class BlockSectionList {
         return true;
     }
 
-    private BlockPos growMin(BlockPos pos, int grow) {
-        return new BlockPos(
-                pos.getX() - grow,
-                Math.max(0, pos.getY() - grow),
-                pos.getZ() - grow
-        );
-    }
-
-    private BlockPos growMax(BlockPos pos, World world, int grow) {
-        return new BlockPos(
-                pos.getX() + grow,
-                Math.min(world.getHeight() - 1, pos.getY() + grow),
-                pos.getZ() + grow
-        );
-    }
-
+    @NotNull
     public List<BlockSection> getBlockSections() {
         return this.blockSections;
     }
@@ -258,7 +270,7 @@ public class BlockSectionList {
         if (sectionCaches == null) return;
 
         for (BlockSectionList collideWith : new ArrayList<>(sectionCaches)) {
-            if (collideWith.registeredBlockSections.contains(sectionKey)) collideWith.dirtyBlockSections.add(sectionKey);
+            collideWith.dirtyBlockSections.add(sectionKey);
         }
     }
 
@@ -270,7 +282,7 @@ public class BlockSectionList {
             }
 
             for (BlockSectionList collideWith : new ArrayList<>(entry.getValue())) {
-                if (collideWith.registeredBlockSections.contains(sectionKey)) collideWith.dirtyBlockSections.add(sectionKey);
+                collideWith.dirtyBlockSections.add(sectionKey);
             }
         }
     }
